test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_sizeof_expr.draco
proc main() void : a := sizeof(int); corp;

