test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_else_as_identifier.draco
int else;
 
proc main() void : a := 1; corp;
